// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[getDotTriples] "
  to simplify things, this
  mini-syntax :: spans
  only one line
  " 1`] = `
Array [
  Object {
    "object": Object {
      "entities": Object {},
      "value": "spans",
    },
    "predicate": Object {
      "entities": Object {},
      "value": "mini-syntax",
    },
  },
]
`;

exports[`[getDotTriples] "(number :: twenty two) (number :: 22)" 1`] = `
Array [
  Object {
    "object": Object {
      "entities": Object {
        "numbers": Array [
          Object {
            "cardinal": "22",
            "normal": "twenty two",
            "number": 22,
            "ordinal": "22nd",
            "prefix": "",
            "suffix": "",
            "terms": Array [
              Object {
                "post": " ",
                "pre": "",
                "tags": Array [
                  "TextValue",
                  "Value",
                  "Cardinal",
                ],
                "text": "twenty",
              },
              Object {
                "post": "",
                "pre": "",
                "tags": Array [
                  "TextValue",
                  "Value",
                  "Cardinal",
                ],
                "text": "two",
              },
            ],
            "text": "twenty two",
            "textCardinal": "twenty two",
            "textOrdinal": "twenty second",
          },
        ],
      },
      "value": "twenty two",
    },
    "predicate": Object {
      "entities": Object {},
      "value": "number",
    },
  },
  Object {
    "object": Object {
      "entities": Object {
        "numbers": Array [
          Object {
            "cardinal": "22",
            "normal": "22",
            "number": 22,
            "ordinal": "22nd",
            "prefix": "",
            "suffix": "",
            "terms": Array [
              Object {
                "post": "",
                "pre": "",
                "tags": Array [
                  "Cardinal",
                  "Value",
                  "NumericValue",
                ],
                "text": "22",
              },
            ],
            "text": "22",
            "textCardinal": "twenty two",
            "textOrdinal": "twenty second",
          },
        ],
      },
      "value": "22",
    },
    "predicate": Object {
      "entities": Object {},
      "value": "number",
    },
  },
]
`;

exports[`[getDotTriples] "[Maria, Bob] :: ([climbed,looked at] :: [the tree, the sun])" 1`] = `
Array [
  Object {
    "object": Object {
      "value": Array [
        Object {
          "entities": Object {},
          "value": "the tree",
        },
        Object {
          "entities": Object {},
          "value": "the sun",
        },
      ],
    },
    "predicate": Object {
      "value": Array [
        Object {
          "entities": Object {},
          "value": "climbed",
        },
        Object {
          "entities": Object {},
          "value": "looked at",
        },
      ],
    },
    "subject": Object {
      "value": Array [
        Object {
          "entities": Object {},
          "value": "Maria",
        },
        Object {
          "entities": Object {},
          "value": "Bob",
        },
      ],
    },
  },
]
`;

exports[`[getDotTriples] "[Maria, Bob] :: ([climbed,looked at] :: the tree)" 1`] = `
Array [
  Object {
    "object": Object {
      "entities": Object {},
      "value": "the tree",
    },
    "predicate": Object {
      "value": Array [
        Object {
          "entities": Object {},
          "value": "climbed",
        },
        Object {
          "entities": Object {},
          "value": "looked at",
        },
      ],
    },
    "subject": Object {
      "value": Array [
        Object {
          "entities": Object {},
          "value": "Maria",
        },
        Object {
          "entities": Object {},
          "value": "Bob",
        },
      ],
    },
  },
]
`;

exports[`[getDotTriples] "[Maria, Bob] :: (climbed :: the tree)" 1`] = `
Array [
  Object {
    "object": Object {
      "entities": Object {},
      "value": "the tree",
    },
    "predicate": Object {
      "entities": Object {},
      "value": "climbed",
    },
    "subject": Object {
      "value": Array [
        Object {
          "entities": Object {},
          "value": "Maria",
        },
        Object {
          "entities": Object {},
          "value": "Bob",
        },
      ],
    },
  },
]
`;

exports[`[getDotTriples] "A :: B :: C :: D" 1`] = `
Array [
  Object {
    "object": Object {
      "entities": Object {},
      "value": "D",
    },
    "predicate": Object {
      "entities": Object {},
      "value": "A :: B :: C",
    },
  },
]
`;

exports[`[getDotTriples] "Bob :: (has :: drivers license), (can drive :: true)" 1`] = `
Array [
  Object {
    "object": Object {
      "entities": Object {},
      "value": "drivers license",
    },
    "predicate": Object {
      "entities": Object {},
      "value": "has",
    },
    "subject": Object {
      "entities": Object {},
      "value": "Bob",
    },
  },
  Object {
    "object": Object {
      "entities": Object {},
      "value": "true",
    },
    "predicate": Object {
      "entities": Object {},
      "value": "can drive",
    },
  },
]
`;

exports[`[getDotTriples] "Maria :: ( climbed :: the tree )" 1`] = `
Array [
  Object {
    "object": Object {
      "entities": Object {},
      "value": "the tree",
    },
    "predicate": Object {
      "entities": Object {},
      "value": "climbed",
    },
    "subject": Object {
      "entities": Object {},
      "value": "Maria",
    },
  },
]
`;

exports[`[getDotTriples] "That night,  (Bob :: (ate :: all the pancakes)), and (we :: (are still :: surprised))" 1`] = `
Array [
  Object {
    "object": Object {
      "entities": Object {},
      "value": "all the pancakes",
    },
    "predicate": Object {
      "entities": Object {},
      "value": "ate",
    },
    "subject": Object {
      "entities": Object {},
      "value": "Bob",
    },
  },
  Object {
    "object": Object {
      "entities": Object {},
      "value": "surprised",
    },
    "predicate": Object {
      "entities": Object {},
      "value": "are still",
    },
    "subject": Object {
      "entities": Object {},
      "value": "we",
    },
  },
]
`;

exports[`[getDotTriples] "arrays :: [banana, apple]" 1`] = `
Array [
  Object {
    "object": Object {
      "value": Array [
        Object {
          "entities": Object {},
          "value": "banana",
        },
        Object {
          "entities": Object {},
          "value": "apple",
        },
      ],
    },
    "predicate": Object {
      "entities": Object {},
      "value": "arrays",
    },
  },
]
`;

exports[`[getDotTriples] "date :: 2022-01-07 15:07" 1`] = `
Array [
  Object {
    "object": Object {
      "entities": Object {
        "dates": Array [
          Object {
            "duration": Object {
              "hours": 8,
              "minutes": 533,
            },
            "end": "2022-01-07T23:59:59.999+01:00",
            "start": "2022-01-07T15:07:00.000+01:00",
            "text": "2022-01-07 15:07",
            "tz": "Europe/Brussels",
            "unit": "time",
          },
        ],
      },
      "value": "2022-01-07 15:07",
    },
    "predicate": Object {
      "entities": Object {},
      "value": "date",
    },
  },
]
`;

exports[`[getDotTriples] "external link :: <http://example.org>" 1`] = `
Array [
  Object {
    "object": Object {
      "entities": Object {},
      "value": "<http://example.org>",
    },
    "predicate": Object {
      "entities": Object {},
      "value": "external link",
    },
  },
]
`;

exports[`[getDotTriples] "internal link :: [[link]]" 1`] = `
Array [
  Object {
    "object": Object {
      "entities": Object {
        "internalLinks": Array [
          "link",
        ],
      },
      "value": "[[link]]",
    },
    "predicate": Object {
      "entities": Object {},
      "value": "internal link",
    },
  },
]
`;

exports[`[getDotTriples] "is a :: [[Editor]], [[Jour]]" 1`] = `
Array [
  Object {
    "object": Object {
      "value": Array [
        Object {
          "entities": Object {},
          "value": "[Editor]]",
        },
        Object {
          "entities": Object {},
          "value": "[[Jour]",
        },
      ],
    },
    "predicate": Object {
      "entities": Object {},
      "value": "is a",
    },
  },
]
`;

exports[`[getDotTriples] "properties :: and values are separated by double colons" 1`] = `
Array [
  Object {
    "object": Object {
      "entities": Object {},
      "value": "and values are separated by double colons",
    },
    "predicate": Object {
      "entities": Object {},
      "value": "properties",
    },
  },
]
`;

exports[`[getDotTriples] "properties and values can be (embedded :: using parenthesis)" 1`] = `
Array [
  Object {
    "object": Object {
      "entities": Object {},
      "value": "using parenthesis",
    },
    "predicate": Object {
      "entities": Object {},
      "value": "embedded",
    },
  },
]
`;

exports[`[getDotTriples] "suddenly, (Maria :: (climbed :: the tree))," 1`] = `
Array [
  Object {
    "object": Object {
      "entities": Object {},
      "value": "the tree",
    },
    "predicate": Object {
      "entities": Object {},
      "value": "climbed",
    },
    "subject": Object {
      "entities": Object {},
      "value": "Maria",
    },
  },
]
`;

exports[`[getDotTriples] "vaccination dates :: [2022-01-07, next week]" 1`] = `
Array [
  Object {
    "object": Object {
      "value": Array [
        Object {
          "entities": Object {
            "dates": Array [
              Object {
                "duration": Object {
                  "days": 1,
                  "hours": 24,
                  "minutes": 1440,
                },
                "end": "2022-01-07T23:59:59.999+01:00",
                "start": "2022-01-07T00:00:00.000+01:00",
                "text": "2022-01-07",
                "tz": "Europe/Brussels",
                "unit": "day",
              },
            ],
          },
          "value": "2022-01-07",
        },
        Object {
          "entities": Object {
            "dates": Array [
              Object {
                "duration": Object {
                  "days": 7,
                  "hours": 168,
                  "minutes": 10080,
                  "weeks": 1,
                },
                "end": "2022-04-17T23:59:59.999+02:00",
                "start": "2022-04-11T00:00:00.000+02:00",
                "text": "next week",
                "tz": "Europe/Brussels",
                "unit": "week",
              },
            ],
          },
          "value": "next week",
        },
      ],
    },
    "predicate": Object {
      "entities": Object {},
      "value": "vaccination dates",
    },
  },
]
`;
